# turtlebot-rfid-slam

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  Makefile  pyproject.toml  requirements-dev.txt
.cursor/rules/: docker-deployment.mdc  git-commits.mdc  project-core.mdc  python-general.mdc  ros2-workspace.mdc  shell-scripts.mdc  turtlebot3-fork.mdc
Turtlebot3_RFID_Test/: RFID_Test.py  basic_marker.py  rfid_publisher.py
Turtlebot3_RFID_Test/Past/: ROS2PubSub.py
Turtlebot3_RFID_Test/Past/arduino-rfid-PN5180/: arduino-rfid-PN5180.ino
colcon_ws/src/turtlebot3_node/src/: odometry.cpp  turtlebot3.cpp
firmware/pn5180-arduino/: arduino-rfid-PN5180.ino
legacy/ros1_turtlebot3_rfid_test/: README.txt  RFID_Test.py  basic_marker.py  rfid_publisher.py
legacy/ros1_turtlebot3_rfid_test/Past/: README.md
robot/: Dockerfile  entrypoint.sh  merge_src.sh
ros2_ws/src/: turtlebot3_description  turtlebot3_teleop
ros2_ws/src/rfid_landmarks/: package.xml  setup.cfg  setup.py
ros2_ws/src/rfid_landmarks/rfid_landmarks/: __init__.py  covariance_replan.py  landmark_manager.py  landmark_store.py
ros2_ws/src/rfid_landmarks/test/: test_flake8.py  test_pep257.py
ros2_ws/src/rfid_msgs/: CMakeLists.txt  LICENSE  package.xml
ros2_ws/src/rfid_msgs/msg/: RfidDetection.msg  RfidLandmark.msg  RfidLandmarkArray.msg
ros2_ws/src/rfid_msgs/srv/: LoadLandmarks.srv
ros2_ws/src/rfid_publisher/: README.md  package.xml  setup.cfg
ros2_ws/src/rfid_publisher/rfid_publisher/: rfid_pub.py
ros2_ws/src/rfid_test/: setup.cfg  setup.py
ros2_ws/src/rfid_test/rfid_test/: rfid_test.py
ros2_ws/src/ros2_rfid_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/ros2_rfid_mapping/config/: ekf_rfid.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  nav2_params.yaml
ros2_ws/src/ros2_rfid_mapping/launch/: covariance_replan_launch.py  localization_with_rfid_launch.py  mapping_with_rfid_launch.py  nav2_launch.py  online_async_launch.py
ros2_ws/src/turtlebot_rfid/: CMakeLists.txt  package.xml  setup.cfg
ros2_ws/src/turtlebot_rfid/launch/: rsp.launch.py
rviz_configs/: rviz_1.rviz
scripts/: build_ros.sh  docker_build_robot.sh  lint.sh  quick_robot_colcon.sh  run_robot_docker.sh
scripts/pc/: README.md  build_ros.sh  build_workspace.sh  docker_build_robot.sh  echo_robot_scan.sh  lint.sh  quick_robot_colcon.sh  run_rviz_robot.sh  teleop_keyboard.sh
scripts/robot/: README.md  check_robot_scan.sh  dump_robot_description.sh  get_robot_description_param.py  robot_ros2.sh  run_robot_docker.sh
server/: Dockerfile
turtlebot3/turtlebot3_bringup/: package.xml
turtlebot3/turtlebot3_bringup/launch/: robot.launch.py
turtlebot3/turtlebot3_cartographer/: package.xml
turtlebot3/turtlebot3_description/: CMakeLists.txt
turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
turtlebot3/turtlebot3_teleop/turtlebot3_teleop/script/: teleop_keyboard.py
turtlebot_rfid/: CMakeLists.txt  package.xml
turtlebot_rfid/config/: view_bot.rviz
turtlebot_rfid/description/: robot_core.xacro
turtlebot_rfid/launch/: rsp.launch.py
